cmake_minimum_required(VERSION 2.8)
project( VisionProcessing )
set(raspicam_DIR "/usr/local/lib/cmake")
find_package( OpenCV REQUIRED )
find_package( raspicam REQUIRED )
add_executable( VisionProcessing VisionProcessing.cpp )
target_link_libraries( VisionProcessing ${OpenCV_LIBS} )
target_link_libraries( VisionProcessing ${raspicam_LIBS} )
target_link_libraries( VisionProcessing ${raspicam_CV_LIBS} )
set (CMAKE_CXX_FLAGS "--std=gnu++11 -O3 ${CMAKE_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "-lntcore -pthread ${CMAKE_EXE_LINKER_FLAGS}")
set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}  "${CMAKE_SOURCE_DIR}/modules")
